@@ -38,6 +38,7 @@
 /* Define, and set defaults. */
 VexControl VG_(clo_vex_control);
 Bool   VG_(clo_error_limit)    = True;
+Int    VG_(clo_error_exitcode) = 0;
 Bool   VG_(clo_db_attach)      = False;
 Char*  VG_(clo_db_command)     = GDB_PATH " -nw %f %p";
 Int    VG_(clo_gen_suppressions) = 0;
