@@ -834,6 +834,22 @@ that can report errors, e.g. Memcheck, but not Cachegrind.</para>
     </listitem>
   </varlistentry>
 
+  <varlistentry id="opt.error-exitcode" xreflabel="--error-exitcode">
+    <term>
+      <option><![CDATA[--error-exitcode=<number> [default: 0] ]]></option>
+    </term>
+    <listitem>
+      <para>Specifies an alternative exit code to return if Valgrind
+      reported any errors in the run.  When set to the default value
+      (zero), the return value from Valgrind will always be the return 
+      value of the process being simulated.  When set to a nonzero value,
+      that value is returned instead, if Valgrind detects any errors.
+      This is useful for using Valgrind as part of an automated test
+      suite, since it makes it easy to detect test cases for which
+      Valgrind has reported errors, just by inspecting return codes.</para>
+    </listitem>
+  </varlistentry>
+
   <varlistentry id="opt.stack-traces" xreflabel="--show-below-main">
     <term>
       <option><![CDATA[--show-below-main=<yes|no> [default: no] ]]></option>
